--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-/data
+/data/
 dd # dependencies
 /node_modules
 /.pnp
@@ -19,6 +19,8 @@ dd # dependencies
 .env.test.local
 .env.production.local
 .bashrc
+.gitignore
+.prettierrc.json
 
 npm-debug.log*
 yarn-debug.log*
