--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "chalk": "^5.3.0",
-    "jsdom": "^23.2.0"
+    "jsdom": "^23.2.0",
+    "puppeteer": "^21.7.0"
   }
 }
