--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "chalk": "^5.3.0",
     "jsdom": "^23.2.0",
-    "puppeteer": "^21.7.0"
+    "puppeteer": "^21.7.0",
+    "puppeteer-real-browser": "^1.4.2"
   }
 }
